# craton-hsm-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
craton-hsm-daemon/: Cargo.toml
craton-hsm-daemon/proto/: craton_hsm.proto
craton-hsm-daemon/src/: config.rs  main.rs  server.rs  tls.rs
deploy/: Dockerfile.ci
docs/: README.md  configuration-reference.md  persistence.md
fuzz/fuzz_targets/: fuzz_attributes.rs
scripts/: local-ci.sh
src/: core.rs
src/audit/: log.rs
src/config/: config.rs
src/crypto/: approved_services.rs  encrypt.rs  entropy_health.rs  metrics.rs  pqc.rs  rate_limit.rs  sign.rs
src/pkcs11_abi/: functions.rs
src/store/: attributes.rs  encrypted_store.rs  lockout_store.rs  (+2 more)
tests/: attribute_management.rs  attribute_validation.rs  audit_and_integrity.rs  concurrent_crypto_hardening.rs  concurrent_session_stress.rs  digest_abi.rs  fips_approved_mode.rs  key_derivation_abi.rs  key_lifecycle_abi.rs  key_rotation.rs  key_wrapping_abi.rs  multipart_encrypt_decrypt.rs  multipart_sign_verify.rs  negative_edge_cases.rs  operation_state.rs  pairwise_consistency.rs  pkcs11_compliance.rs  pkcs11_compliance_extended.rs  pkcs11_conformance.rs  pkcs11_error_paths.rs  pkcs11_info_functions.rs  pqc_abi_comprehensive.rs  random_and_session.rs  rsa_abi_comprehensive.rs  security_properties.rs  session_state_machine.rs  supplementary_functions.rs  token_state_persistence.rs
tools/craton-hsm-admin/: Cargo.toml
tools/craton-hsm-admin/src/: main.rs
tools/craton-hsm-admin/src/commands/: backup.rs  import_parse.rs  key.rs  mod.rs
tools/pkcs11-spy/: Cargo.toml
tools/pkcs11-spy/src/: loader.rs
(+5 files in other folders)
